--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,7 +30,9 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_global.scss",
-        "styles/partials/_header.scss"
+        "styles/partials/_header.scss",
+        "styles/partials/_nav.scss",
+        "styles/partials/_footer.scss"
       ]
     }
   ],
