--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,8 +32,8 @@
         "styles/partials/_global.scss",
         "styles/partials/_header.scss",
         "styles/partials/_nav.scss",
-        "styles/partials/_footer.scss",
-        "styles/partials/_whoisharper.scss"
+        "styles/partials/_sections.scss",
+        "styles/partials/_footer.scss"
       ]
     }
   ],
