finished responsive for home page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,12 +33,13 @@
         "styles/partials/_header.scss",
         "styles/partials/_nav.scss",
         "styles/partials/_sections.scss",
-        "styles/partials/_footer.scss"
+        "styles/partials/_footer.scss",
+        "styles/partials/_media.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
